# GameOfLifeOpenCL

./: CMakeLists.txt  OpenCL_GameOfLife.sln
OpenCL_GameOfLife/: GameOfLife.cpp  GameOfLifeOCL.cpp  KernelCode.cl  OpenCL_GameOfLife.vcxproj  OpenCL_GameOfLife.vcxproj.filters  vcpkg.json
OpenCL_GameOfLife/Debug/: OpenCL_GameOfLife.exe.recipe  OpenCL_GameOfLife.ilk  vc142.idb
OpenCL_GameOfLife/Debug/OpenCL_G.cfce3571.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  OpenCL_GameOfLife.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
